将 Langchain4j 分支迁移为纯 LangChain4j 实现